调整userforpage的查询sql

--- a/micro-website-master/zxcv_index/index.html
+++ b/micro-website-master/zxcv_index/index.html
@@ -15,14 +15,19 @@
 	<link rel="stylesheet" href="../bootstrap-3.3.7/css/style.min.css">
 	<link rel="stylesheet" href="../bootstrap-3.3.7/css/animate.min.css">
 	<link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap-switch.min.css">
-	<link rel="stylesheet" href="../bootstrap-3.3.7/css/plugins/bootstrap-table/bootstrap-table.min.css">
-	<link rel="stylesheet" href="../bootstrap-3.3.7/css/plugins/bootstrapValidator/bootstrapValidator.min.css">
 	<script src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
+
+	<!-- 引入bootstrap-table 插件-->
+	<link rel="stylesheet" href="../bootstrap-3.3.7/css/plugins/bootstrap-table/bootstrap-table.min.css">
 	<script src="../bootstrap-3.3.7/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
     <script src="../bootstrap-3.3.7/js/plugins/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
+
+	<!-- 引入bootstrap-validator 插件-->
+	<link rel="stylesheet" href="../bootstrap-3.3.7/css/plugins/bootstrapValidator/bootstrapValidator.min.css">
 	<script src="../bootstrap-3.3.7/js/plugins/bootstrapValidator/bootstrapValidator.min.js"></script>
+
 	<!-- 引入bootstrap-switch插件 -->
+	<link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap-switch.min.css">
 	<script src="../bootstrap-3.3.7/js/bootstrap-switch.min.js"></script>
 
 	<!-- 引入封装的ajax -->
