--- a/micro-website-master/zxcv_user/user.html
+++ b/micro-website-master/zxcv_user/user.html
@@ -24,10 +24,10 @@
     </div>
     <table id="userTable" class="table table-hover"></table>
     <div id="toolbar" class="btn-group pull-right" style="margin-right: 20px;">
-        <button id="btn_edit" type="button" class="btn btn-default" style="display: none; border-radius: 0">
+        <button id="btn_edit" type="button" class="btn btn-default" style="border-radius: 0">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true" ></span>修改
         </button>
-        <button id="btn_delete" type="button" class="btn btn-default" style="display: none;">
+        <button id="btn_delete" type="button" class="btn btn-default">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
         </button>
         <button id="btn_add" type="button" class="btn btn-default">
@@ -35,7 +35,7 @@
         </button>
     </div>
 </div>
-<div class="addBody" style="width:100%; display: none;position: absolute;top:10px">
+<div class="addBody" style="width:100%; display: none;">
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
@@ -111,7 +111,7 @@
     </div>
 </div>
 </div>
-<div class="changeBody" style="width:100%; height:500px; display: none;position: absolute;top:10px;">
+<div class="changeBody" style="width:100%; height:500px; display: none;">
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
