--- a/micro-website-master/zxcv_info/info.html
+++ b/micro-website-master/zxcv_info/info.html
@@ -1,4 +1,7 @@
 <!-- 资讯管理 -->
+<!-- 引入wangEditor插件 -->
+<link rel="stylesheet" href="../common/wangEditor/wangEditor.min.css">
+<script src="../common/wangEditor/wangEditor.min.js"></script>
 <div>
     <div class="info-manage">
         <div class="info-action">
@@ -31,6 +34,60 @@
             <ul class="pagination"></ul>
         </div>
         <!-- 增加、修改模态框 -->
+        <!--<div class="modal" id="add-update-modal" role="dialog">-->
+            <!--<div class="modal-dialog" role="document">-->
+                <!--<div class="modal-content">-->
+                    <!--<div class="modal-header">-->
+                        <!--<button type="button" class="close" data-dismiss="modal">-->
+                            <!--<span>&times;</span>-->
+                        <!--</button>-->
+                        <!--<h4 class="modal-title"></h4>-->
+                    <!--</div>-->
+                    <!--<div class="modal-body">-->
+                        <!--<form class="form-horizontal">-->
+                            <!--<div class="form-group">-->
+                                <!--<label for="title" class="col-md-2 control-label"> 标题</label>-->
+                                <!--<div class="col-md-10">-->
+                                    <!--<input id="title" type="text" class="form-control">-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="form-group">-->
+                                <!--<label for="category" class="col-sm-2 control-label">所属新闻类型</label>-->
+                                <!--<div class="col-md-10">-->
+                                    <!--<select id="category" class="form-control"></select>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="form-group">-->
+                                <!--<label class="col-sm-2 control-label">列表样式</label>-->
+                                <!--<div class="col-md-5">-->
+                                    <!--<label for="style-one">-->
+                                        <!--<input type="radio" id="style-one" name="liststyle" value="style-one">-->
+                                        <!--<img src="../common/images/style-one.jpg" alt="">-->
+                                    <!--</label>-->
+                                <!--</div>-->
+                                <!--<div class="col-md-5">-->
+                                    <!--<label for="style-two">-->
+                                        <!--<input type="radio" id="style-two" name="liststyle" value="style-two">-->
+                                        <!--<img src="../common/images/style-two.jpg" alt="">-->
+                                    <!--</label>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="form-group">-->
+                                <!--<label for="content" class="col-md-2 control-label"> 正文</label>-->
+                                <!--<div class="col-md-10">-->
+                                    <!--<textarea id="content" type="text" class="form-control">-->
+                                    <!--</textarea>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</form>-->
+                    <!--</div>-->
+                    <!--<div class="modal-footer">-->
+                        <!--<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>-->
+                        <!--<button id="to-save" type="button" class="btn btn-primary">确定</button>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="modal" id="add-update-modal" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -54,26 +111,10 @@
                                     <select id="category" class="form-control"></select>
                                 </div>
                             </div>
+
                             <div class="form-group">
-                                <label class="col-sm-2 control-label">列表样式</label>
-                                <div class="col-md-5">
-                                    <label for="style-one">
-                                        <input type="radio" id="style-one" name="liststyle" value="style-one">
-                                        <img src="../common/images/style-one.jpg" alt="">
-                                    </label>
-                                </div>
-                                <div class="col-md-5">
-                                    <label for="style-two">
-                                        <input type="radio" id="style-two" name="liststyle" value="style-two">
-                                        <img src="../common/images/style-two.jpg" alt="">
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="content" class="col-md-2 control-label"> 正文</label>
-                                <div class="col-md-10">
-                                    <textarea id="content" type="text" class="form-control">
-                                    </textarea>
+                                <div id="editor_add">
+
                                 </div>
                             </div>
                         </form>
@@ -85,6 +126,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     <script>
     //需要用到的数据
@@ -213,6 +255,8 @@
         $('input[type=radio]:checked').prop('checked', false);
         //模态框中的select的值为.myselect的值
         $('#category').val($('.myselect').val());
+        //加载编辑正文
+        fun.addFun();
         $('#add-update-modal').modal('show');
     });
     //修改事件绑定
@@ -407,6 +451,144 @@
     }
     function addZero(num) {
         return num < 10 ? '0' + num : num;
+    }
+
+
+    var fun = {
+        addFun: function () {
+            var E = window.wangEditor;
+            var editor = new E('#editor_add');
+            // 自定义菜单配置
+            editor.customConfig.menus = [
+                'head',  // 标题
+                'bold',  // 粗体
+                'fontSize',  // 字号
+                // 'fontName',  // 字体
+                'italic',  // 斜体
+                'underline',  // 下划线
+                'strikeThrough',  // 删除线
+                'foreColor',  // 文字颜色
+                'backColor',  // 背景颜色
+                'link',  // 插入链接
+                'list',  // 列表
+                'justify',  // 对齐方式
+                'quote',  // 引用
+                'emoticon',  // 表情
+                'image',  // 插入图片
+                'table',  // 表格
+                // 'video',  // 插入视频
+                'code',  // 插入代码
+                'undo',  // 撤销
+                'redo'  // 重复
+            ];
+            // editor.customConfig.uploadImgServer = '/Upload/wang_editor';  // 上传图片到服务器
+            //editor.customConfig.uploadImgServer = '/upload';
+            editor.customConfig.uploadImgShowBase64 = true;   // 使用 base64 保存图片
+            // 3M
+            editor.customConfig.uploadImgMaxSize = 3 * 1024 * 1024;
+            // 限制一次最多上传 3 张图片
+            editor.customConfig.uploadImgMaxLength = 3;
+            // 自定义文件名
+            editor.customConfig.uploadFileName = 'editor_img';
+            // 将 timeout 时间为 3s
+            editor.customConfig.uploadImgTimeout = 3000;
+
+            editor.create();
+            editor.customConfig.uploadImgHooks = {
+                before: function (xhr, editor, files) {
+                    // 图片上传之前触发
+                    // xhr 是 XMLHttpRequst 对象，editor 是编辑器对象，files 是选择的图片文件
+
+                    // 如果返回的结果是 {prevent: true, msg: 'xxxx'} 则表示用户放弃上传
+                    // return {
+                    //     prevent: true,
+                    //     msg: '放弃上传'
+                    // }
+                    // alert("前奏");
+                },
+                success: function (xhr, editor, result) {
+                    // 图片上传并返回结果，图片插入成功之后触发
+                    // xhr 是 XMLHttpRequst 对象，editor 是编辑器对象，result 是服务器端返回的结果
+                    // var url = result.data.url;
+                    // alert(JSON.stringify(url));
+                    // editor.txt.append(url);
+                    // alert("成功");
+                },
+                fail: function (xhr, editor, result) {
+                    // 图片上传并返回结果，但图片插入错误时触发
+                    // xhr 是 XMLHttpRequst 对象，editor 是编辑器对象，result 是服务器端返回的结果
+                    alert("失败");
+                },
+                error: function (xhr, editor) {
+                    // 图片上传出错时触发
+                    // xhr 是 XMLHttpRequst 对象，editor 是编辑器对象
+                    // alert("错误");
+                },
+                // 如果服务器端返回的不是 {errno:0, data: [...]} 这种格式，可使用该配置
+                // （但是，服务器端返回的必须是一个 JSON 格式字符串！！！否则会报错）
+                customInsert: function (insertImg, result, editor) {
+                    // 图片上传并返回结果，自定义插入图片的事件（而不是编辑器自动插入图片！！！）
+                    // insertImg 是插入图片的函数，editor 是编辑器对象，result 是服务器端返回的结果
+                    // 举例：假如上传图片成功后，服务器端返回的是 {url:'....'} 这种格式，即可这样插入图片：
+                    var url = result.data[0];
+                    insertImg(url);
+                    // result 必须是一个 JSON 格式字符串！！！否则报错
+                }
+            }
+
+
+            //获取文本输入的内容
+            /*document.getElementById('editor_submit').addEventListener('click', function () {
+                var content = editor.txt.html();
+                var noticeTitle = $('#arcitleTit').val();
+                var noticeType = $('#msgTypeadd').val();
+                var effDate = $('#daydaterange-btnstaadd').val() + ' 00:00:00';
+                var expireDate = $('#daydaterange-btnendadd').val() + ' 23:59:59';
+
+                effDate = new Date(effDate.replace(/-/g, '/'));
+                expireDate = new Date(expireDate.replace(/-/g, '/'));
+
+
+                var req = {
+                    noticeTitle: noticeTitle,
+                    noticeBigType: noticeType,
+                    noticeType: noticeType,
+                    remoteStorage: true,
+                    addressType: 1,
+                    effDate: effDate,
+                    expireDate: expireDate,
+                    noticeContent: content,
+                    fileExt: "txt"
+
+                };
+                //条件查询
+
+                req.sysCode = sysComm.sysCode;
+                var opt = {
+                    method: 'post',
+                    url: dataUrl.util.saveNotice(),
+                    data: JSON.stringify(req),
+                    contentType: 'application/json; charset=utf-8',
+                    dataType: 'json',
+                    success: function (res) {
+                        if (res.code == '8888') {
+                            // fun.createTableData();
+                            $("#msg_recordtable").bootstrapTable('refresh');
+                            $('.editor-content').addClass('display-none');
+                            $('.normal-content').removeClass('display-none');
+
+                        }
+                    },
+                    error: function (msg) {
+                        alert("ajax连接异常：" + msg);
+                    }
+                };
+                sysAjax(opt);
+
+
+            }, false)*/
+
+        },
     }
     </script>
 </div>
