--- a/micro-website-master/zxcv_info/info.html
+++ b/micro-website-master/zxcv_info/info.html
@@ -456,6 +456,8 @@
 
     var fun = {
         addFun: function () {
+            //清空
+            $("#editor_add").empty();
             var E = window.wangEditor;
             var editor = new E('#editor_add');
             // 自定义菜单配置
