富文本上传

--- a/micro-website-master/zxcv_index/index.html
+++ b/micro-website-master/zxcv_index/index.html
@@ -19,7 +19,10 @@
 
 	<!-- 引入bootstrap-table 插件-->
 	<link rel="stylesheet" href="../bootstrap-3.3.7/css/plugins/bootstrap-table/bootstrap-table.min.css">
+	<link rel="stylesheet" href="../bootstrap-3.3.7/js/plugins/bootstrap-select/bootstrap-select.min.css"></script>
 	<script src="../bootstrap-3.3.7/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+	<script src="../bootstrap-3.3.7/js/plugins/bootstrap-select/bootstrap-select.js"></script>
+	<script src="../bootstrap-3.3.7/js/plugins/bootstrap-select/bootstrap-select.min.js"></script>
 	<script src="../bootstrap-3.3.7/js/plugins/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
 
 	<!-- 引入bootstrap-validator 插件-->
